chore(ci/cd): rework workflow with composite

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,26 +2,46 @@ name: Build and test
 
 on: [ push, pull_request ]
 
-env:
-  DOTNET_VERSION: '9.0.x'
-
 jobs:
   build:
+    name: 🔨 Build
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
-
-      - name: Restore dependencies
-        run: dotnet restore
+      - name: Setup .NET Project & dependencies
+        uses: ./.github/actions/setup-dotnet-action
 
       - name: Build
         run: dotnet build --no-restore
+
+      - name: Publish build output
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-output
+          path: |
+            ./bin/
+            ./**/bin/
+            ./**/obj/
+
+  test:
+    name: ✅ Test
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup .NET Project & dependencies
+        uses: ./.github/actions/setup-dotnet-action
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-output
 
       - name: Run Tests
         run: dotnet test --no-build --verbosity normal
