--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -58,3 +58,10 @@ jobs:
 
       - name: Format Check
         run: dotnet format --verify-no-changes
+  secret:
+    name: 🔐 Read fake secret
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Read secret
+        run: echo "Secret value is ${{ secrets.MY_SECRET }}"
