--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,6 +1,16 @@
 name: .NET development workflow
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches:
+      - main
+      - develop
+      - release/**
+  pull_request:
+    branches:
+      - main
+      - develop
+      - release/**
 
 jobs:
   build:
